--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,10 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            ghcr.io/jxeeno/${{ github.repository }}
+            ghcr.io/${{ github.repository }}
           # generate Docker tags based on the following events/attributes
+          flavor: |
+            prefix=ubuntu
           tags: |
             type=schedule
             type=ref,event=branch
@@ -51,3 +53,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
+          tags: ghcr.io/${{ github.repository }}:latest
