--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,3 +54,4 @@ jobs:
         with:
           push: true
           tags: ghcr.io/${{ github.repository }}:latest
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
